Added text to the buttons

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <h5 class="card-title">BMW M4 Competition</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="https://www.bmw.com.do/es/index.html" class="btn btn-primary">Purchase One</a>
                     </div>
                 </div>
                 <div class="card my-4" style="width: 18rem;">
@@ -134,7 +134,7 @@
                         <h5 class="card-title">BMW M4 Performance</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="https://www.bmw.com.do/es/index.html" class="btn btn-primary">Purchase One</a>
                     </div>
                 </div>
                 <div class="card my-4" style="width: 18rem;">
@@ -144,7 +144,7 @@
                         <h5 class="card-title">BMW M4 Sedan</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="https://www.bmw.com.do/es/index.html" class="btn btn-primary">Purchase One</a>
                     </div>
                 </div>
             </div>
